--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -2,62 +2,79 @@
 const { iconNode } = require("discourse-common/lib/icon-library");
 // TOOLBAR
 api.onToolbarCreate(toolbar => {
-  toolbar.addButton({
-      id: "get_button",
-      group: "crud",
-      icon: "blue_circle",
-      title: "GET",
-      perform: e => e.applySurround('[wrap="badge-get"]\n', '\n[/wrap]', '')
-  });
-});
-
-api.onToolbarCreate(toolbar => {
-    toolbar.addButton({
-        id: "post_button",
-        group: "crud",
-        icon: "green_circle",
-        title: "POST",
-        perform: e => e.applySurround('[wrap="badge-post"]\n', '\n[/wrap]', '')
-    });
-});
-
-api.onToolbarCreate(toolbar => {
-  toolbar.addButton({
-      id: "put_button",
-      group: "crud",
-      icon: "purple_circle",
-      title: "PUT",
-      perform: e => e.applySurround('[wrap="badge-put"]\n', '\n[/wrap]', '')
-  });
-});
-
-api.onToolbarCreate(toolbar => {
-  toolbar.addButton({
-      id: "patch_button",
-      group: "crud",
-      icon: "yellow_circle",
-      title: "PATCH",
-      perform: e => e.applySurround('[wrap="badge-patch"]\n', '\n[/wrap]', '')
-  });
-});
-
-api.onToolbarCreate(toolbar => {
-  toolbar.addButton({
-      id: "delete_button",
-      group: "crud",
-      icon: "red_circle",
-      title: "DELETE",
-      perform: e => e.applySurround('[wrap="badge-delete"]\n', '\n[/wrap]', '')
-  });
-});
-
-api.onToolbarCreate(toolbar => {
     toolbar.addButton({
         id: "align_center_button",
         group: "fontStyles",
         icon: "align-center",
         perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', 'Center')
     });
+});
+
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgeGet",
+      icon: "blue_circle",
+      label: "GET",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePost",
+      icon: "green_circle",
+      label: "POST",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePut",
+      icon: "purple_circle",
+      label: "PUT",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePatch",
+      icon: "yellow_circle",
+      label: "PATCH",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgeDelete",
+      icon: "red_circle",
+      label: "DELETE",
+      group: "crud"
+  };
+});
+
+api.modifyClass("controller:composer", {
+  pluginId: 'composer-crud-operations', 
+  actions: {
+    badgeGet() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePost() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePut() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePatch() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgeDelete() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    }
+  }
 });
 
 toolbar.addButton({
