--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -80,9 +80,8 @@ api.modifyClass("controller:composer", {
 toolbar.addButton({
   id: "crud_options",
   group: "crud",
-  icon: "cloud",
+  icon: "cog",
   title: "composer.crud_options",
-  sendAction: this.onExpandPopupMenuOptions.bind(this),
   popupMenu: true,
 });
 
