--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -3,12 +3,12 @@ const { iconNode } = require("discourse-common/lib/icon-library");
 // TOOLBAR
 
 api.onToolbarCreate(toolbar => {
-    toolbar.addButton({
-        id: "align_center_button",
-        group: "fontStyles",
-        icon: "align-center",
-        perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', 'Center')
-    });
+  toolbar.addButton({
+      id: "align_center_button",
+      group: "extras",
+      icon: "align-center",
+      perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', 'Center')
+  });
 });
 
 
