Fix align center

--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -7,7 +7,7 @@ api.onToolbarCreate(toolbar => {
       id: "align_center_button",
       group: "extras",
       icon: "align-center",
-      perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', "")
+      perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', 'align_center_text')
   });
 });
 
