Fix align center

--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -11,5 +11,18 @@ api.onToolbarCreate(toolbar => {
   });
 });
 
+// TEXTS
+let translations = I18n.translations[I18n.currentLocale()].js;
+if (!translations) {
+  translations = {};
+}
+if (!translations.composer) {
+  translations.composer = {};
+}
+
+translations.composer.align_center_button_title = settings.align_center_button;
+translations.composer.align_center_text =
+  settings.align_center_text;
+
 
 </script>
