--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -11,6 +11,80 @@ api.onToolbarCreate(toolbar => {
   });
 });
 
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgeGet",
+      icon: "blue_circle",
+      label: "GET",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePost",
+      icon: "green_circle",
+      label: "POST",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePut",
+      icon: "purple_circle",
+      label: "PUT",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgePatch",
+      icon: "yellow_circle",
+      label: "PATCH",
+      group: "crud"
+  };
+});
+
+api.addToolbarPopupMenuOptionsCallback(() => {
+  return {
+      action: "badgeDelete",
+      icon: "red_circle",
+      label: "DELETE",
+      group: "crud"
+  };
+});
+
+api.modifyClass("controller:composer", {
+  pluginId: 'composer-crud-operations', 
+  actions: {
+    badgeGet() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePost() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePut() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgePatch() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    },
+    badgeDelete() {
+      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', "");
+    }
+  }
+});
+
+toolbar.addButton({
+  id: "crud_options",
+  group: "crud",
+  icon: "cog",
+  title: "composer.crud_options",
+  popupMenu: true
+});
+
 // TEXTS
 let translations = I18n.translations[I18n.currentLocale()].js;
 if (!translations) {
