--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -16,6 +16,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgeGet",
       icon: "cloud",
       label: "GET",
+      title: "GET"
       group: "crud"
   };
 });
@@ -25,6 +26,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgePost",
       icon: "cloud",
       label: "POST",
+      title: "POST",
       group: "crud"
   };
 });
@@ -34,6 +36,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgePut",
       icon: "cloud",
       label: "PUT",
+      title: "PUT",
       group: "crud"
   };
 });
@@ -43,6 +46,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgePatch",
       icon: "cloud",
       label: "PATCH",
+      title: "PATCH",
       group: "crud"
   };
 });
@@ -52,6 +56,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgeDelete",
       icon: "cloud",
       label: "DELETE",
+      title: "DELETE",
       group: "crud"
   };
 });
