--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -16,7 +16,7 @@ api.addToolbarPopupMenuOptionsCallback(() => {
       action: "badgeGet",
       icon: "cloud",
       label: "GET",
-      title: "GET"
+      title: "GET",
       group: "crud"
   };
 });
