--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -63,7 +63,7 @@ api.modifyClass("controller:composer", {
   pluginId: 'composer-crud-operations', 
   actions: {
     badgeGet() {
-      this.get("toolbarEvent").applySurround('[wrap="badge-get"]\n', '\n[/wrap]', 'get_text');
+      this.get("toolbarEvent").addText('[wrap="badge-post"][/wrap]');
     },
     badgePost() {
       this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', 'post_text');
