--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -66,16 +66,16 @@ api.modifyClass("controller:composer", {
       this.get("toolbarEvent").addText('[wrap="badge-get"][/wrap]');
     },
     badgePost() {
-      this.get("toolbarEvent").applySurround('[wrap="badge-post"]\n', '\n[/wrap]', 'post_text');
+      this.get("toolbarEvent").addText('[wrap="badge-post"][/wrap]');
     },
     badgePut() {
-      this.get("toolbarEvent").applySurround('[wrap="badge-put"]\n', '\n[/wrap]', 'put_text');
+      this.get("toolbarEvent").addText('[wrap="badge-put"][/wrap]');
     },
     badgePatch() {
-      this.get("toolbarEvent").applySurround('[wrap="badge-patch"]\n', '\n[/wrap]', 'patch_text');
+      this.get("toolbarEvent").addText('[wrap="badge-patch"][/wrap]');
     },
     badgeDelete() {
-      this.get("toolbarEvent").applySurround('[wrap="badge-delete"]\n', '\n[/wrap]', 'delete_text');
+      this.get("toolbarEvent").addText('[wrap="badge-delete"][/wrap]');
     }
   }
 });
