Fix syntax error

--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -85,7 +85,7 @@ api.onToolbarCreate(toolbar => {
       id: "operations",
       group: "crud",
       icon: "cloud",
-      title: "composer.operations"
+      title: "composer.operations",
       popupMenu: true
     });
 });
