--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -17,7 +17,7 @@ api.onToolbarCreate(toolbar => {
       group: "extras",
       icon: "cog",
       popupMenu: true,
-      title: "dropdown.options"
+      title: "dropdown.options",
       perform: e => e.applySurround('[wrap="center"]\n', '\n[/wrap]', 'align_center_text')
   });
 });
