--- a/desktop/head_tag.html
+++ b/desktop/head_tag.html
@@ -13,6 +13,15 @@ api.onToolbarCreate(toolbar => {
 
 api.onToolbarCreate(toolbar => {
   toolbar.addButton({
+      id: "dropdown_button",
+      group: "extras",
+      icon: "cloud",
+      popupMenu: true
+  });
+});
+
+api.onToolbarCreate(toolbar => {
+  toolbar.addButton({
       id: "hidden_button",
       group: "extras",
       icon: "eye-slash",
